--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "next-fonts": "^1.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "serverless-mysql": "^2.1.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "eslint": "^9",
