--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
+    "mysql2": "^3.14.0",
     "next": "^15.2.0",
     "next-fonts": "^1.5.1",
     "react": "^18.3.1",
